# rlpaperdetector

./: .gitignore  README.md  build_dataset.py  build_preference_data.py  build_probe_set.py  build_rw_preferences.py  eval.py  monitor_subjects.py  predict.py  publish_to_huggingface.py  pyproject.toml  submit_hf_benchmark_job.py  submit_hf_training_job.py  train_baseline.py
.github/workflows/: benchmark-models-hf-jobs.yml  build-preferences-huggingface.yml  ci.yml  create-hf-repos.yml  publish-huggingface.yml  train-axolotl-hf-jobs.yml
configs/: example_subject_queries.txt  excluded_papers.json  probe_pmids.txt  retraction_rubric.json
configs/axolotl/: retraction_margin_dpo.yaml  retraction_orpo.yaml
src/rlpaperdetector/: __init__.py  baseline.py  benchmark_eval.py  dataset_builder.py  eval_baseline.py  exclusions.py  hf_benchmark_jobs.py  hf_jobs.py  hf_publish.py  judge_data.py  monitor_subjects.py  predict_baseline.py  preference_dataset_from_labels.py  preference_pipeline.py  probe_set.py  train_baseline.py
tests/: test_baseline_pipeline.py  test_benchmark_eval.py  test_dataset_builder.py  test_hf_benchmark_jobs.py  test_hf_jobs.py  test_monitor_subjects.py  test_preference_dataset_from_labels.py  test_preference_pipeline.py  test_probe_set.py
tests/fixtures/: candidate_responses.jsonl  retraction_watch_fixture.csv
