[project]
name = "rlpaperdetector"
version = "0.1.0"
description = "Dataset builder for retraction prediction experiments."
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
